--- a/BurachiribuARQuizApp/Info.plist
+++ b/BurachiribuARQuizApp/Info.plist
@@ -23,9 +23,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>ARを使用するためにカメラを使用します。</string>
+	<string>ARを使用するためにカメラを使用します</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>写真を保存するために使います。</string>
+	<string>写真を保存します</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
